fix(style); fix alignment of hero content to center

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul {
 
 .hero-content{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 16px;
 }
 
